[metadata]
name = iitornip
version = 1.0.0
description = A Python-based tool to check IP addresses are or are not Tor nodes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vaibhav Kumar
author_email = "myselfv@hotmail.com"
url = https://github.com/vkvbit/iitornip
download_url = https://github.com/vkvbit/iitornip/
license = MIT
keywords = iitornip, onion, tor, tor nodes, tor exit nodes

classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    iitornip = iitornip.__main__:cli
